# AIROCmAL

./: .gitignore  AIROCmAL_install.sh  NotesArchive.md  README.md  requirements_AIROCmAL.txt
.github/: FUNDING.yml
Auto1111/: libref-Auto1111  user_customize_Auto1111_example.sh
ComfyUI/: libref-ComfyUI  requirements_ComfyUI.txt  user_customize_ComfyUI_example.sh
CrewAI/: libref-CrewAI  requirements_CrewAI.txt
DeFooocus/: libref-DeFooocus  user_customize_DeFooocus_example.sh
Exo/: libref-Exo
F5-TTS/: libref-F5-TTS  requirements_F5-TTS.txt  user_customize_F5-TTS_example.sh
Fooocus/: libref-Fooocus  requirements_Fooocus.txt  requirements_Fooocus.txt.bak  user_customize_Fooocus_example.sh
Forge/: libref-Forge  requirements_Forge.txt  user_customize_Forge_example.sh
GPT4All/: libref-GPT4All  requirements_GPT4All.txt  user_customize_GPT4All_example.sh
Index-TTS/: libref-Index-TTS  requirements_Index-TTS.txt
LM_Studio/: requirements_LM_Studio.txt
Lumina-T2X/: libref-Lumina-T2X  requirements_Lumina-T2X.txt
MetaSearch/: libref-MetaSearch  user_customize_MetaSearch_example.sh
N8N/: requirements_N8N.npm  requirements_N8N.txt
Ollama/: Start-OllamaPortable.sh  libref-Ollama  requirements_Ollama.txt  user_customize_Ollama_example.sh
Ollama-Vulkan/: libref-Ollama-Vulkan  requirements_Ollama-Vulkan.txt  user_customize_Ollama-Vulkan_example.sh
OmniGen/: libref-OmniGen  requirements_OmniGen.txt  (+1 more)
shared1/MyCrewAIProjects/aiinaal_template/: README.md  pyproject.toml
shared1/MyCrewAIProjects/aiinaal_template/src/aiinaal_template/: crew.py  main.py
(+43 files in other folders)
